fix diagram alignment

--- a/src/App.css
+++ b/src/App.css
@@ -70,9 +70,9 @@ h1, h2 {
 .line-ranking {
   grid-area: ranking;
   /* background: blue;*/
-  height: 94.5%;
+  height: 96%;
   width: 100%;
-  margin-top: 3%;
+  margin-top: 10px;
   background: white;
   z-index: 2;
 }
@@ -136,7 +136,7 @@ h1, h2 {
   grid-area: chart;
 
   margin-left: var(--line-plot-margin-left);
-  margin-top: 2%;
+  margin-top: 5px;
   /*  background: cornflowerblue;*/
 
 }
